# edgekit

./: .gitignore  .railwayignore  Dockerfile  README.md  TASK_db_merge.md  edgekit_dev.db  fg-test.err  frontend.log.err  install-services.ps1  named-tunnel.log.err  pyproject.toml  tunnel.log.err
.github/workflows/: deploy.yml
backend/: requirements.txt  ruff.toml
backend/api/: __init__.py  auth.py  billing.py  cache.py  limits.py  main.py  preview.py  routes_forward.py  routes_graph.py  routes_graph_v2.py  routes_user.py  schemas.py  store.py  supa.py
backend/db/: __init__.py  models.py  session.py
backend/engine/: __init__.py  manual_check_builder_v2.py  manual_smoke.py  test_builder.py  test_builder_v2.py  test_builder_v2_indicators.py  test_engine_correctness.py  test_engine_reference.py  test_smoke.py  test_strategy_signals.py  test_trail_partial.py
backend/scripts/: sharekhan_refresh.py  vps_deploy.sh  vps_deploy_frontend.sh  vps_setup_frontend.sh
backend/tests/: test_smoke.py
bridge/: EdgekitConnector.mq5  __init__.py  connector.py  executor.py  mt5_bridge.py
docs/: API.md  ARCHITECTURE.md  RUNBOOK.md  deploy-check.md
frontend/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.vercel/: project.json
frontend/public/: icon-export.html  logo-concepts.html  logo-concepts2.html  logo-concepts3.html
frontend/src/: middleware.ts
frontend/supabase/: schema.sql
scripts/: deploy.sh  update.sh
supabase/: 000_full_schema.sql  001_persistence.sql  002_vps_merge.sql
(+117 files in other folders)
