[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "edgekit"
version     = "0.1.0"
description = "No-code strategy backtesting platform for any market."
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "MetaTrader5; sys_platform == 'win32'",
    "yfinance>=0.2",
    "dukascopy-python>=4.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "google-genai>=1.0",
    "httpx>=0.27",
    "PyJWT>=2.8",
    "cryptography>=41.0",
    "python-dotenv>=1.0",
    "sentry-sdk[fastapi]>=2.0",
    "pyarrow>=14.0",
]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
